@@ -70,6 +70,10 @@ Core and builtins
 - unicode.iswide() and unicode.width() is dropped and the East Asian
   Width support is moved to unicodedata extension module.
 
+- Patch #941229: The source code encoding in interactive mode
+  now refers sys.stdin.encoding not just ISO-8859-1 anymore.  This
+  allows for non-latin-1 users to write unicode strings directly.
+
 Extension modules
 -----------------
 
